# afb-binder

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  afb-binder-prompt  changelog  metapkg.txt  mkbuild.sh  stress-clients.sh  stress-server.sh
afb-daemon/: CMakeLists.txt  afb-daemon  afb-daemon.pc
docs/: CMakeLists.txt  afb-binder-book.yml  afb-binder-debugging.md  afb-binder-https.md  afb-binder-options.md  afb-binder-vocabulary.md  afb-binder.1.scd  afb-binder.scd  afb-getting.md  afb-overview.md  libafb-binder.md  protocol-x-afb-ws-json1.md
docs/pictures/: basis.odg  interconnection.odg
packaging/rpm/: afb-binder.spec
src/: CMakeLists.txt  afb-binder-config.c  afb-binder-config.h  afb-binder-defaults.h  afb-binder-main.c  afb-binder-opts.c  afb-binder-opts.h  afb-binder-utils.c  afb-binder-utils.h  afb-binder.c  afb-binder.h  afb-binder.h.in  afb-binder.pc.in  binder-settings.h.in  libafb-binder.c  libafb-binder.h  libafb-binder.pc.in  main-afb-binder.c
src/monitoring/: AFB.js  monitor-base.css  monitor-demo.css  monitor-pastel.css  monitor.html  monitor.js
src/test-extensions/: Makefile  logo.c  tone.c
